167 ==> 156599 - Bad date in header.
168 ==> 242623 - The default product for Report Bug about metadata editor does not exist.
169 ==> 094362 - Change permissions while importing images.
170 ==> 152313 - I can't configurate Intel Pocket Camera cs630. I can't get the photos.
171 ==> 361982 - Browse tag clicking on a tag crashes digiKam.
172 ==> 252200 - digiKam fails to compile.
173 ==> 277046 - digiKam doesn't build with libpgf-6.11.24.
174 ==> 121485 - Current camera images are hidden by cached images.
175 ==> 146169 - Download images into Folder hierarchy (using exif-info).
176 ==> 287186 - Import queued downloads does not work anymore.
177 ==> 296817 - Unsort download of pictures.
178 ==> 291541 - digiKam seems to be rewriting Metadata even if no change is made.
179 ==> 296078 - Changes in the organization of tags are not saved when quitting digiKam.
180 ==> 271021 - Result: stability improved.
181 ==> 387958 - Core database: cannot process schema initialization (uprade from 5.7).
182 ==> 387960 - Failed build Calendar tool with kcalcore 17.12.
183 ==> 387957 - Image Editor Launches without Image.
184 ==> 387975 - Just after ugrade to 5.7.0 version, none pictures are shown.
185 ==> 387976 - Remember aspect ratio.
186 ==> 375317 - MYSQL: digikam crashes during face recognition.
187 ==> 310050 - MYSQL : Slow database performance after canceling a large duplicate image search.
188 ==> 385653 - Non handled sqlite exception because of lack of space.
189 ==> 388121 - SQL schema update from version 8 to version 9 fails.
190 ==> 388130 - Non-GUI commands should not require an X display.
191 ==> 388147 - "More Tags..." Doesn't Open Captions Side Menu In Preview.
192 ==> 388183 - Windows installer is not HiDPI ready.
193 ==> 326406 - A picture without geolocalisation is localized in North Pole.
194 ==> 387150 - Crash when syncing metadata from images to database.
195 ==> 387764 - Gphoto2 camera drivers not installed by PKG Installer.
196 ==> 