@@ -205,4 +205,5 @@ BUGFIXES FROM BUGZILLA:
 193 ==> 326406 - A picture without geolocalisation is localized in North Pole.
 194 ==> 387150 - Crash when syncing metadata from images to database.
 195 ==> 387764 - Gphoto2 camera drivers not installed by PKG Installer.
-196 ==> 
+196 ==> 388260 - Pressing <ENTER> on highlited name when browsing "Unknown" face tags will tag two photos instead of one.
+197 ==> 
